--- a/.github/workflows/github-actions-angular.yml
+++ b/.github/workflows/github-actions-angular.yml
@@ -2,9 +2,11 @@
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - "main"
   pull_request:
-    branches: [ main ]
+    branches: 
+      - "main"
 
 jobs:
   build:
