--- a/.github/workflows/github-actions-angular.yml
+++ b/.github/workflows/github-actions-angular.yml
@@ -13,47 +13,47 @@ jobs:
       matrix:
         node-version: [12.x]
 
-    steps:
-      - uses: actions/checkout@v2
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - name: Cache node modules
-        uses: actions/cache@v1
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+#       - name: Cache node modules
+#         uses: actions/cache@v1
+#         with:
+#           path: ~/.npm
+#           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-node-
             
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v1.4.2
-        with:
-          node-version: ${{ matrix.node-version }}
+#       - name: Setup Node.js environment
+#         uses: actions/setup-node@v1.4.2
+#         with:
+#           node-version: ${{ matrix.node-version }}
 
-      - name: Install Dependencies
-        run: npm ci
+#       - name: Install Dependencies
+#         run: npm ci
           
-      # - name: Run Unit Tests
-      #   run: npm run ci:test
+#       # - name: Run Unit Tests
+#       #   run: npm run ci:test
 
-      # - name: Run codacy-coverage-reporter
-      #   uses: codacy/codacy-coverage-reporter-action@master
-      #   with:
-      #     project-token: ${{ secrets.CODACY_CODE_COVERAGE_TOKEN }}
-      #     coverage-reports: coverage/lcov.info
+#       # - name: Run codacy-coverage-reporter
+#       #   uses: codacy/codacy-coverage-reporter-action@master
+#       #   with:
+#       #     project-token: ${{ secrets.CODACY_CODE_COVERAGE_TOKEN }}
+#       #     coverage-reports: coverage/lcov.info
       
-      # - name: Clean Distribution Directory
-      #   run: npm run ci:clean
+#       # - name: Clean Distribution Directory
+#       #   run: npm run ci:clean
         
-      # - name: Build Application
-      #   run: npm run ci:build
+#       # - name: Build Application
+#       #   run: npm run ci:build
       
-      # - name: List Files in Distribution Directory
-      #   run: ls -R ./dist
+#       # - name: List Files in Distribution Directory
+#       #   run: ls -R ./dist
         
-      # - name: FTP Deploy
-      #   uses: SamKirkland/FTP-Deploy-Action@3.1.1
-      #   with:
-      #     ftp-server: "${{ secrets.CD_FTP_SERVER }}"
-      #     ftp-username: "${{ secrets.CD_FTP_USERNAME }}"
-      #     ftp-password: "${{ secrets.CD_FTP_PASSWORD }}"
-      #     local-dir: "dist/"
+#       # - name: FTP Deploy
+#       #   uses: SamKirkland/FTP-Deploy-Action@3.1.1
+#       #   with:
+#       #     ftp-server: "${{ secrets.CD_FTP_SERVER }}"
+#       #     ftp-username: "${{ secrets.CD_FTP_USERNAME }}"
+#       #     ftp-password: "${{ secrets.CD_FTP_PASSWORD }}"
+#       #     local-dir: "dist/"
