--- a/.github/workflows/github-actions-angular.yml
+++ b/.github/workflows/github-actions-angular.yml
@@ -13,8 +13,8 @@ jobs:
       matrix:
         node-version: [12.x]
 
-#     steps:
-#       - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
 
 #       - name: Cache node modules
 #         uses: actions/cache@v1
