--- a/.github/workflows/github-actions-angular.yml
+++ b/.github/workflows/github-actions-angular.yml
@@ -24,10 +24,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
             
-#       - name: Setup Node.js environment
-#         uses: actions/setup-node@v1.4.2
-#         with:
-#           node-version: ${{ matrix.node-version }}
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v1.4.2
+        with:
+          node-version: '16.x'
 
 #       - name: Install Dependencies
 #         run: npm ci
