--- a/.github/workflows/github-actions-angular.yml
+++ b/.github/workflows/github-actions-angular.yml
@@ -24,9 +24,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
             
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v1.4.2
-        with:
+      - name: Use Node.js  
+        uses: actions/setup-node@v1  
+        with:  
           node-version: '16.x'
 
 #       - name: Install Dependencies
