--- a/.github/workflows/github-actions-angular.yml
+++ b/.github/workflows/github-actions-angular.yml
@@ -29,8 +29,8 @@ jobs:
         with:  
           node-version: '16.x'
 
-#       - name: Install Dependencies
-#         run: npm ci
+      - name: Installation des dépendences
+        run: npm ci
           
 #       # - name: Run Unit Tests
 #       #   run: npm run ci:test
