--- a/.github/workflows/github-actions-angular.yml
+++ b/.github/workflows/github-actions-angular.yml
@@ -30,10 +30,10 @@ jobs:
           node-version: '16.x'
 
       - name: Installation des dépendences
-        run: npm ci
+        run: npm i
           
-#       # - name: Run Unit Tests
-#       #   run: npm run ci:test
+      - name: Run Unit Tests
+        run: npm run ci:test
 
 #       # - name: Run codacy-coverage-reporter
 #       #   uses: codacy/codacy-coverage-reporter-action@master
