--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "ci:test":"ng test --watch=false",
+    "test":"ng test",
+    "ci:test": "ng test --watch=false --browsers=ChromeHeadlessCustom",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "i":"npm install"
+    "i": "npm install"
   },
   "private": true,
   "dependencies": {
@@ -28,7 +29,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.1",
+    "@angular-devkit/build-angular": "^13.3.8",
     "@angular-eslint/builder": "13.5.0",
     "@angular-eslint/eslint-plugin": "13.5.0",
     "@angular-eslint/eslint-plugin-template": "13.5.0",
@@ -42,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
     "angular-in-memory-web-api": "^0.13.0",
+    "cypress": "latest",
     "eslint": "^8.17.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
@@ -49,7 +51,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2",
-    "cypress": "latest"
+    "puppeteer": "^15.3.2",
+    "typescript": "~4.5.2"
   }
 }
